<resources>
    <string name="app_name">Exercise_sqlite</string>
    <string name="dftr_kontak">Daftar Kontak</string>
    <string name="tmbh_data">Tambah Data</string>
    <string name="nama">Nama</string>
    <string name="h_nama">Masukkan Nama</string>
    <string name="no_tlp">Nomor Telepon</string>
    <string name="h_tlp">Masukkan Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="h_email">Masukkan Email</string>
    <string name="alamat">Alamat</string>
    <string name="h_alamat">Masukkan Alamat</string>
    <string name="btn_save">Simpan</string>
    <string name="profil">Profil</string>
    <string name="upd_data">Update Data</string>
    <string name="btn_batal">Batal</string>
    <string name="btn_ubah">Ubah Data</string>
</resources>
