<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tambah_data">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:text="@string/tmbh_data"
                android:textColor="#aa55ff"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editNama"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:text="@string/nama"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:hint="@string/h_nama"
                android:maxLines="2"
                android:inputType="textPersonName"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:ems="12"/>

            <TextView
                android:id="@+id/nomor_tlp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nama"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/no_tlp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edit_tlp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editNama"
                android:hint="@string/h_tlp"
                android:inputType="phone"
                android:layout_alignLeft="@id/editNama"
                android:layout_marginRight="25dp"
                android:ems="12" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomor_tlp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_tlp"
                android:hint="@string/h_email"
                android:inputType="textEmailAddress"
                android:layout_alignLeft="@id/editNama"
                android:layout_marginRight="25dp"
                android:ems="12" />

            <TextView
                android:id="@+id/nomor_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/alamat"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edit_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_email"
                android:hint="@string/h_alamat"
                android:layout_alignLeft="@id/editNama"
                android:layout_marginRight="25dp"
                android:inputType="textPostalAddress|textMultiLine"
                android:ems="12" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"
                android:text="@string/btn_save"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/edit_alamat"
                android:layout_marginTop="15dp"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>